--- a/templates/register.html
+++ b/templates/register.html
@@ -16,37 +16,58 @@
                     {{ form.csrf_token() }}
                     <div class="control">
                         {{ form.email(class="input", placeholder="Email") }}
+                        {% for error in form.email.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.firstname(class="input", placeholder="First Name") }}
+                        {% for error in form.firstname.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.lastname(class="input", placeholder="Last Name") }}
+                        {% for error in form.lastname.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.phone(class="input", placeholder="Phone") }}
+                        {% for error in form.phone.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.password(class="input", placeholder="Password") }}
+                        {% for error in form.password.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.confirm_password(class="input", placeholder="Confirm Password") }}
+                        {% for error in form.confirm_password.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
 
                 </div>
                 <div class="field">
                     <div class="control">
                         {{ form.pin_key(class="input", placeholder="PIN Key") }}
+                        {% for error in form.pin_key.errors %}
+                            <p style="color:red">{{ error }}</p>
+                        {% endfor %}
                     </div>
                     <div>
                         {# TODO: Add PIN generation setup instructions #}
