--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,39 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 {% block content %}
+    <div class="column is-4 is-offset-4">
+        <h3 class="title">Login</h3>
+        <div class="box">
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="notification is-danger">
+                        {{ messages[0] }}
+                    </div>
+                {% endif %}
+            {% endwith %}
+                <form method="POST">
+                    <div class="field">
+                        {{ form.csrf_token() }}
+                        <div class="control">
+                            {{ form.email(class="input", placeholder="Email") }}
+                            {% for error in form.email.errors %}
+                                <p style="color:red">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="field">
+                        <div class="control">
+                            {{ form.password(class="input", placeholder="Password") }}
+                            {% for error in form.password.errors %}
+                                <p style="color:red">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
 
-    <h3 class="title is-3">Login</h3>
+                    <div>
+                        {{ form.submit(class="button is-info is-centered") }}
+                    </div>
+                </form>
 
-    <p>TODO</p>
-
+        </div>
+    </div>
 {% endblock %}
