implement two-factor authentication

--- a/templates/register.html
+++ b/templates/register.html
@@ -69,8 +69,15 @@
                             <p style="color:red">{{ error }}</p>
                         {% endfor %}
                     </div>
-                    <div>
-                        {# TODO: Add PIN generation setup instructions #}
+                    <div class="notification is-danger">
+                        <p><b>Set up time-based PIN generator</b></p>
+                        <ul>
+                            <li>1. Download <a href="https://authy.com/download/" target="_blank"><u><b>Authy</b></u></a> on your device.</li>
+                            <li>2. Select add new account.</li>
+                            <li>3. Enter your PIN key.</li>
+                            <li>4. Enter name for new account.</li>
+                            <li>5. Select token length of 6.</li>
+                        </ul>
                     </div>
 
                 </div>
