--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,14 @@
                             {% endfor %}
                         </div>
                     </div>
-
+                    <div class="field">
+                        <div class="control">
+                            {{ form.pin(class="input", placeholder="Time-Based PIN") }}
+                            {% for error in form.pin.errors %}
+                                <p style="color:red">{{ error }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
                     <div>
                         {{ form.submit(class="button is-info is-centered") }}
                     </div>
