--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,7 @@
                     </div>
                 {% endif %}
             {% endwith %}
+            {% if not session['logins'] or session['logins'] < 3 %}
                 <form method="POST">
                     <div class="field">
                         {{ form.csrf_token() }}
@@ -40,7 +41,7 @@
                         {{ form.submit(class="button is-info is-centered") }}
                     </div>
                 </form>
-
+            {% endif %}
         </div>
     </div>
 {% endblock %}
