add name and student number

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,5 @@
   CSC2031 Security & Programming Paradigms
 </h2>
 
-{#TODO: ADD NAME AND STUDENT NUMBER#}
-<p>Name ('Student Number')</p>
+<p>Name: Stefanos Larkou, Student Number: c0034805</p>
 {% endblock %}
